# gr20_mobile_robotics

./: README.md
radar_odom/: CMakeLists.txt
radar_odom/config/: graph_slam_config.yaml  radar_pcl_config.yaml
radar_odom/include/: RadarEgoVel.hpp
radar_odom/include/ceres/: CeresGraph.hpp  CostFunction_Imu.h  CostFunction_Odom.h  CostFunction_Trans.h
radar_odom/include/rio_utils/: radar_point_cloud.hpp
radar_odom/launch/: run.py
radar_odom/src/: baselink_tf.cpp  optimizer.cpp  radar_pcl_processor.cpp  record.cpp
src/4D-Radar-Odom/: CMakeLists.txt  README.md  package.xml
src/4D-Radar-Odom/config/: config.yaml
src/4D-Radar-Odom/include/: RadarEgoVel.hpp  RadarEgoVelConfig.hpp  keyframe.h  utils.hpp
src/4D-Radar-Odom/include/ceres/: CostFunction_Ori.h
src/4D-Radar-Odom/include/rio_utils/: radar_point_cloud.hpp
src/4D-Radar-Odom/launch/: run.py
src/4D-Radar-Odom/src/: baselink_tf.cpp  optimizer.cpp  radar_pcl_processor.cpp
src/eval/: package.xml  setup.cfg  setup.py
src/eval/eval/: eval_node.py  gt_publisher_node.py
src/eval/launch/: eval.launch.py
src/lidarslam_ros2/graph_based_slam/: package.xml
src/lidarslam_ros2/lidarslam/: package.xml
src/lidarslam_ros2/lidarslam/launch/: lidarslam.launch.py
src/lidarslam_ros2/lidarslam/rviz/: mapping.rviz
src/lidarslam_ros2/scanmatcher/src/: scanmatcher_component.cpp
src/naive_map/: package.xml  setup.cfg  setup.py
src/naive_map/launch/: radarodommap.launch.py
src/naive_map/naive_map/: naive_mapper_node.py
